<resources>
    <string name="app_name">ElBatoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">El Bato App</string>
    <string name="nav_header_subtitle">app jojo@boss</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_map">Map</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_services">Services</string>
    <string name="menu_contact">Contact</string>

    <string name="title_list_restaurant">Liste Restaurants</string>
    <string name="title_voir_list_restaurant">Voir la liste des Restaurants</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tiret">-</string>

</resources>