<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_restaurants"
            android:title="@string/menu_restaurants" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_services"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact" />

    </group>
</menu>